--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^5.3.2",
     "express": "^4.13.3",
     "http-proxy": "^1.11.1",
+    "immutability-helper": "^2.2.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
