--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "WTFPL",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
     "express": "^4.13.3",
