--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "barebone-react",
-  "version": "1.0.0",
-  "description": "",
+  "name": "viper-visualizer",
+  "version": "0.1.0",
   "main": "index.js",
   "scripts": {
     "start": "node server"
   },
   "author": "",
-  "license": "WTFPL",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.16.2",
     "babel-core": "^5.8.22",
