--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server",
-    "build": "webpack --progress -p"
+    "build": "webpack --config webpack.prod.js --progress -p"
   },
   "author": "",
   "license": "MIT",
@@ -13,6 +13,7 @@
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
     "express": "^4.13.3",
+    "firebase": "^4.9.0",
     "http-proxy": "^1.11.1",
     "immutability-helper": "^2.2.2",
     "prop-types": "^15.5.10",
@@ -21,6 +22,7 @@
     "react-hot-loader": "^1.2.9",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
@@ -32,6 +34,7 @@
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "redux-devtools": "^3.4.0",
-    "style-loader": "^0.18.2"
+    "style-loader": "^0.18.2",
+    "webpack-merge": "^4.1.1"
   }
 }
