--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
+    "url-search-params": "^0.10.0",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
