--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-custom-properties": "^1.2.0",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.2.9",
+    "react-markdown": "^3.1.5",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
