--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
+    "start": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js --progress -p",
     "deploy": "firebase deploy"
   },
@@ -11,35 +11,36 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-core": "^5.8.22",
-    "babel-loader": "^5.3.2",
-    "express": "^4.13.3",
     "firebase": "^4.9.0",
-    "http-proxy": "^1.11.1",
     "immutability-helper": "^2.2.2",
     "mousetrap": "^1.6.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-custom-properties": "^1.2.0",
     "react-dom": "^15.6.1",
-    "react-hot-loader": "^1.2.9",
     "react-markdown": "^3.1.5",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
-    "url-search-params": "^0.10.0",
-    "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.10.1"
+    "url-search-params": "^0.10.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "react-hot-loader": "^3.1.3",
     "redux-devtools": "^3.4.0",
     "style-loader": "^0.18.2",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^4.1.1"
   }
 }
