--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --config webpack.dev.js",
+    "start": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js --progress -p",
     "deploy": "firebase deploy"
   },
