--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^15.6.1",
     "react-markdown": "^3.1.5",
     "react-redux": "^5.0.5",
+    "react-sortable-hoc": "^0.6.8",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
     "url-search-params": "^0.10.0"
