--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mousetrap": "^1.6.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-click-n-hold": "^1.0.6",
     "react-custom-properties": "^1.2.0",
     "react-dom": "^15.6.1",
     "react-markdown": "^3.1.5",
