--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js --progress -p",
-    "deploy": "firebase deploy"
+    "deploy": "firebase deploy",
+    "go": "npm run build && npm run deploy"
   },
   "author": "",
   "license": "MIT",
